# fastapi-transformers

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  fastapi.yml  ruff.yml
fastapi_transformers/: __init__.py  main.py  models.py
