[tool.poetry]
name = "fastapi-transformers"
version = "0.1.0"
description = "AI microservice using Django, FastAPI and HuggingFace Transformers"
authors = ["Yousuf Abu Shanab"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fastapi_transformers" }]
homepage = "https://github.com/youzarsiph/fastapi-transformers/"
repository = "https://github.com/youzarsiph/fastapi-transformers/"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
transformers = "4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
